2013-10-26  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub.d/00_header.in: Don't use LANG if it's not set.

2013-10-26  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub-mkconfig.in: Replace $0 with $self.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.

2013-10-26  BVK Chaitanya  <bvk.groups@gmail.com>

	* docs/osdetect.cfg: New file.

2013-10-26  BVK Chaitanya  <bvk.groups@gmail.com>

	* tests/util/grub-shell.in: Add new --debug option.

2013-10-26  BVK Chaitanya  <bvk.groups@gmail.com>

	* tests/test_unset.in: New test.

2013-10-26  BVK Chaitanya  <bvk.groups@gmail.com>

	* tests/test_sha512sum.in: New test.

2013-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c: Replace strncat with memcpy.
	* include/grub/misc.h: Remove strncat.
	* grub-core/lib/posix_wrap/string.h: Likewise.

2013-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/date_unit_test.c: New test.

2013-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/datetime.c (grub_unixtime2datetime): Fix mishandling
	of first three years after start of validity of unixtime.

2013-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (get_logical_num_lines): Use unsigned
	division as the one making more sense.
	(update_screen): Likewise.
	(complete): Likewise.

2013-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (complete): Make sure that width is >0.

2013-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Make char and string width grub_size_t rather than grub_ssize_t.

2013-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/cmdline.c (grub_history_get): Make argument into
	unsigned.
	(grub_history_replace): Likewise.

2013-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid6_recover.c: Use unsigned arithmetics when
	appropriate.

2013-10-25  Vladimir Serbinenko  <phcoder@gmail.com>
